--- a/index.html
+++ b/index.html
@@ -528,6 +528,20 @@
             });
         });
     }
+// Запрет масштабирования страницы на мобильных устройствах
+let lastTouchEnd = 0;
+document.addEventListener('touchend', (event) => {
+    const now = (new Date()).getTime();
+    if (now - lastTouchEnd <= 300) {
+        event.preventDefault();
+    }
+    lastTouchEnd = now;
+}, false);
+
+// Запрет выхода за границы интерфейса
+document.addEventListener('touchmove', (event) => {
+    event.preventDefault();
+}, { passive: false });
 
     // Initialize game
     function initializeGame() {
